[gd_scene load_steps=8 format=3 uid="uid://bxncam1gqx03l"]

[ext_resource type="PackedScene" uid="uid://nh3cp22bbbym" path="res://scenes/ui/background.tscn" id="1_8y0td"]
[ext_resource type="Script" path="res://scripts/ui/settings_menu.gd" id="1_tvcou"]
[ext_resource type="Texture2D" uid="uid://dkqopvucgfqtw" path="res://assets/textures/ui/main_menu.png" id="2_slmsk"]
[ext_resource type="Script" path="res://scripts/ui/back_button.gd" id="4_a3cwn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_271ed"]
atlas = ExtResource("2_slmsk")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gih6j"]
atlas = ExtResource("2_slmsk")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1w0v"]
atlas = ExtResource("2_slmsk")
region = Rect2(64, 49, 17, 15)
margin = Rect2(-1.025, 0.84, 0, -3)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tvcou")

[node name="Background" parent="." instance=ExtResource("1_8y0td")]
layout_mode = 1

[node name="SettingsLabel" type="Label" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
anchor_left = 0.5
anchor_right = 0.504
offset_left = -204.0
offset_top = 65.0
offset_right = 206.08
offset_bottom = 165.0
theme_type_variation = &"HeaderMedium"
text = "Settings:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuContainer" type="ScrollContainer" parent="."]
clip_contents = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
anchor_left = 0.5
anchor_right = 0.504
anchor_bottom = 1.0
offset_left = -200.0
offset_top = 200.0
offset_right = 202.08
offset_bottom = -160.0
size_flags_horizontal = 4
size_flags_vertical = 4
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="Nickname" type="LineEdit" parent="MenuContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "nickname"
alignment = 1
max_length = 10
select_all_on_focus = true

[node name="MusicContainer" type="HBoxContainer" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MenuContainer/VBoxContainer/MusicContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = SubResource("AtlasTexture_271ed")

[node name="MusicSlider" type="HSlider" parent="MenuContainer/VBoxContainer/MusicContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(346, 48)
layout_mode = 2

[node name="SoundsContainer" type="HBoxContainer" parent="MenuContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MenuContainer/VBoxContainer/SoundsContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = SubResource("AtlasTexture_gih6j")

[node name="SoundsSlider" type="HSlider" parent="MenuContainer/VBoxContainer/SoundsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(346, 48)
layout_mode = 2

[node name="CustomAddressButton" type="CheckButton" parent="MenuContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Use custom address"
clip_text = true

[node name="CustomAddressLine" type="LineEdit" parent="MenuContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "localhost:5558"
placeholder_text = "custom address"
alignment = 1
editable = false

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -130.0
offset_right = 75.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
icon = SubResource("AtlasTexture_l1w0v")
icon_alignment = 1
expand_icon = true
script = ExtResource("4_a3cwn")

[connection signal="text_changed" from="MenuContainer/VBoxContainer/Nickname" to="." method="_on_nickname_text_changed"]
[connection signal="drag_ended" from="MenuContainer/VBoxContainer/MusicContainer/MusicSlider" to="." method="_on_music_slider_drag_ended"]
[connection signal="drag_ended" from="MenuContainer/VBoxContainer/SoundsContainer/SoundsSlider" to="." method="_on_sounds_slider_drag_ended"]
[connection signal="toggled" from="MenuContainer/VBoxContainer/CustomAddressButton" to="." method="_on_custom_address_button_toggled"]
[connection signal="text_changed" from="MenuContainer/VBoxContainer/CustomAddressLine" to="." method="_on_custom_address_line_text_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
